static/styles.css
body {
  margin: 10px;
  font-family: Arial, Helvetica, sans-serif;
  background: #131313;
  color: #eeebff;
}

h1,
p {
  margin: 0;
}

p {
  margin-top: 10px;
  font-size: 14px;
}

a,
.fake-link {
  cursor: pointer;
  text-decoration: underline;
  color: #8a8a8a;
}

code {
  background-color: #ebebeb;
  padding: 0 5px 0 5px;
  border-radius: 10px;
}

.fake-link {
  background: none !important;
  border: none;
  cursor: pointer;
  font-size: 16px;
}

.container {
  margin-top: 10px;
  background-color: #202020;
  padding: 10px;
}

.center-text,
.filter {
  text-align: center;
}

.filter {
  padding-top: 10px;
}

.motd {
  background-color: #5a0043;
  text-align: center;
  font-weight: bold;
  margin-bottom: 20px;
  padding: 10px;
}

.motd:empty {
  display: none;
}

#twitch-embed > iframe {
  min-height: max(70vh, 550px);
}

.dual-column #content-container {
  display: flex;
  align-items: start;
}

.dual-column #twitch-embed-wrapper {
  flex: 1.3 1 0px;
  position: sticky;
  top: 0;
}

.dual-column #thumbnail-wrapper {
  flex: 1 1 0px;
}

.dual-column .thumbnail-container {
    display: grid;
    grid-template-columns: 50% 50%;
}

@media only screen and (min-width: 600px) {
  h1 {
    font-size: 2.7em;
  }

  .grid-container {
    min-height: 20px;
    display: grid;
    grid-template-columns: 80% 20%;
    grid-template-rows: 1fr;
    gap: 0px 0px;
    grid-template-areas: "left-pane right-pane";
  }

  .even-grid-container {
    min-height: 20px;
    display: grid;
    grid-template-columns: 30% 70%;
    grid-template-rows: 1fr;
    gap: 0px 0px;
    grid-template-areas: "even-left-pane even-right-pane";
  }

  .options-spacer {
    margin-top: 20px;
  }
}

.left-pane {
  grid-area: left-pane;
  font-style: italic;
}

.even-left-pane {
  grid-area: even-left-pane;
  font-style: italic;
  align-self: center;
  text-align: center;
}

.right-pane {
  grid-area: right-pane;
  align-self: center;
  text-align: center;
}

.even-right-pane {
  font-style: italic;
  grid-area: even-right-pane;
  align-self: center;
  text-align: center;
}

.cookie-check {
  margin-top: 7px;
  font-style: italic;
  text-align: right;
}

.stream_duration_container {
  text-align: left;
}

.thumbnail-container {
  display: grid;
  grid-template-columns: 25% 25% 25% 25%;
}

@media only screen and (max-width: 599px) {
  .thumbnail-container {
    display: grid;
    grid-template-columns: 50% 50%;
  }

  #new-streamer-button {
    margin-top: 10px;
  }

  h1 {
    font-size: 1.5em;
  }

  .cookie-check {
    text-align: center;
    display: inline-block;
  }

  .stream_duration_container {
    text-align: center;
  }
}

@media only screen and (min-width: 721px) {
  .motd-mobile {
    display: none;
  }
}

#new-streamer-button {
  background-color: #008a07;
  border: none;
  color: white;
  padding: 10px 5px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
  width: 100%;
  cursor: pointer;
}

#new-streamer-button:disabled,
#new-streamer-button[disabled] {
  background-color: #efefef;
}

.loading-throbber {
  width: 17px;
  height: 17px;
  filter: brightness(0.5);
}

.search-input {
  width: 100%;
  font-weight: bold;
}

.options-columns {
  display: grid;
  grid-gap: 5px;
  align-items: center;
}

.field-description {
  font-style: italic;
  font-size: 14px;
  display: block;
}

.field-config {
  font-size: 15px;
}

.grid-right {
  grid-column: 2;
}

.grid-span {
  grid-column: 1 / span 2;
}

.grid-right > input {
  margin-left: 0;
}

.thumbnail-item {
  border: 1px solid rgba(0, 0, 0, 0.8);
  font-size: 30px;
  text-align: center;
  margin: 10px;
  overflow: hidden;
  cursor: pointer;
  width: 90%;
  justify-self: center;
}

#footer {
  text-align: center;
  margin-top: 13px;
}

.invisible {
  /* throbber animation should run in background, so set to invisible instead of display: none */
  visibility: hidden;
}

.hidden {
  display: none;
}

.nobreak {
  white-space: nowrap;
}

@media only screen and (min-width: 1200px) {
  /* default mode (skinny) */
  #page-container {
    max-width: 70vw;
    margin: auto;
  }

  #twitch-embed, #twitch-embed > iframe {
    min-height: 60vh;
  }

  /* wide and min mode should take up more room -- 80vh is decent until the screen gets weirdly short*/
  .wide #page-container, .minimal #page-container {
    max-width: none;
  }

  .wide #twitch-embed > iframe, .minimal #twitch-embed > iframe {
    min-height: 80vh;
  }
}

.thumbnail-item:hover {
  filter:brightness(1.25);
}

#new-streamer-button:active:hover {
  filter:brightness(.78);
}

.minimal #page-container {
  height: 100%;
  display: flex;
  flex-direction: column;
}

body.minimal {
  height: calc(100% - 10px - 10px); /* Don't forget top and bottom! */
}

.minimal .hide-on-minimal {
  display: none;
}

.minimal #twitch-embed, .minimal #twitch-embed > iframe {
  height: 100%
}

.minimal #twitch-embed-wrapper {
  flex-grow: 1;
}

.background-textured {
  background-color: #0C000C !important;
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='200' height='200' viewBox='0 0 800 800'%3E%3Cg fill='none' stroke='%23180018' stroke-width='3.6'%3E%3Cpath d='M769 229L1037 260.9M927 880L731 737 520 660 309 538 40 599 295 764 126.5 879.5 40 599-197 493 102 382-31 229 126.5 79.5-69-63'/%3E%3Cpath d='M-31 229L237 261 390 382 603 493 308.5 537.5 101.5 381.5M370 905L295 764'/%3E%3Cpath d='M520 660L578 842 731 737 840 599 603 493 520 660 295 764 309 538 390 382 539 269 769 229 577.5 41.5 370 105 295 -36 126.5 79.5 237 261 102 382 40 599 -69 737 127 880'/%3E%3Cpath d='M520-140L578.5 42.5 731-63M603 493L539 269 237 261 370 105M902 382L539 269M390 382L102 382'/%3E%3Cpath d='M-222 42L126.5 79.5 370 105 539 269 577.5 41.5 927 80 769 229 902 382 603 493 731 737M295-36L577.5 41.5M578 842L295 764M40-201L127 80M102 382L-261 269'/%3E%3C/g%3E%3Cg fill='%23240A23'%3E%3Ccircle cx='769' cy='229' r='7'/%3E%3Ccircle cx='539' cy='269' r='7'/%3E%3Ccircle cx='603' cy='493' r='7'/%3E%3Ccircle cx='731' cy='737' r='7'/%3E%3Ccircle cx='520' cy='660' r='7'/%3E%3Ccircle cx='309' cy='538' r='7'/%3E%3Ccircle cx='295' cy='764' r='7'/%3E%3Ccircle cx='40' cy='599' r='7'/%3E%3Ccircle cx='102' cy='382' r='7'/%3E%3Ccircle cx='127' cy='80' r='7'/%3E%3Ccircle cx='370' cy='105' r='7'/%3E%3Ccircle cx='578' cy='42' r='7'/%3E%3Ccircle cx='237' cy='261' r='7'/%3E%3Ccircle cx='390' cy='382' r='7'/%3E%3C/g%3E%3C/svg%3E") !important;
  /* background by SVGBackgrounds.com */
}

.background-textured .container {
  background: #20202070;
}

